# products-spd1

./: .gitignore  pyproject.toml
spd_project/: db.sqlite3  manage.py
spd_project/emails/: models.py
spd_project/emails/migrations/: 0001_initial.py
spd_project/orders/: models.py  serializers.py  views.py
spd_project/orders/migrations/: 0001_initial.py  0002_salesorder_date_salesorder_price.py  0003_salesorder_user_alter_salesorder_price.py  0004_salesorder_products.py  0005_salesorder_email.py
spd_project/products/: serializers.py  views.py
spd_project/products/migrations/: 0001_initial.py
spd_project/spd_project/: asgi.py  settings.py  urls.py  wsgi.py
spd_project/static/: app.js
spd_project/templates/: index.html  main_app.html  products.html
